Fix z-index of navbar to cover the sessionize table

--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -151,7 +151,7 @@ html {
 }
 
 nav {
-  @apply z-10;
+  @apply z-[500];
 }
 
 /* mailchimp */
